<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    >

    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TableRow 
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
            <TextView
                android:id="@+id/altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
            <TextView
                android:id="@+id/hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velocidade"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
            <TextView
                android:id="@+id/velocidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
         <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precisao"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
            <TextView
                android:id="@+id/precisao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esperando"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
    </TableLayout>
    
     <TextView
        android:id="@+id/status"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presentation"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="5dp">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
    </LinearLayout>

</LinearLayout>
